force-app/main/default/objects/SDG_Target_Indicator__c/SDG_Target_Indicator__c.object-meta.xml
<CustomObject>
    <description>SDG Target Indicators for measuring goal progress</description>
    <label>Target Indicator</label>
    <nameField>
        <displayFormat>SDG-TI-{00000}</displayFormat>
        <label>Target Indicator ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>