force-app/main/default/objects/SDG_Target_Indicator__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Unique identifier code for the indicator</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the indicator code (e.g., 1.1.1, 1.2.1).</inlineHelpText>
    <label>Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>