force-app/main/default/objects/SDG_Target_Indicator__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the indicator</description>
    <inlineHelpText>Provide details about what the indicator measures.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>