force-app/main/default/objects/SDG_Target_Indicator__c/fields/Goal_Target__c.field-meta.xml
<CustomField>
    <fullName>Goal_Target__c</fullName>
    <description>Parent SDG Goal Target</description>
    <inlineHelpText>Select the goal target this indicator measures.</inlineHelpText>
    <label>Goal Target</label>
    <referenceTo>SDG_Goal_Target__c</referenceTo>
    <relationshipLabel>Target Indicators</relationshipLabel>
    <relationshipName>Target_Indicators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>