force-app/main/default/objects/SDG_Target_Indicator__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Classification tier of the indicator</description>
    <inlineHelpText>Enter the tier classification (I, II, or III).</inlineHelpText>
    <label>Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>